Fix layout issues

--- a/src/views/components/layout/layout.scss
+++ b/src/views/components/layout/layout.scss
@@ -3,6 +3,8 @@
 .layout-container {
   width: 100%;
   height: 100%;
+  min-height: 100vh !important;
+
   .layout-header {
     background-color: colors.$bg1;
     color: colors.$light1;
@@ -35,7 +37,7 @@
     }
   }
 
-  .layout-content-background {
+  .layout-content {
     background-color: colors.$bg5;
     padding-bottom: 32px;
     min-height: 100%;
